<resources>
    <string name="app_name">Swoosh</string>
    <string name="get_started">GET STARTED</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="todo">TODO</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="womens">Womens</string>
    <string name="co_ed">co-ed</string>
    <string name="next">next</string>
    <string name="i_am_a">I am a</string>
    <string name="finnish">Finnish</string>
    <string name="baller">baller</string>
    <string name="beginner">beginner</string>
    <string name="searchLeagues">Looking for a co-ed beginner league near you...</string>
</resources>
